# VkLayerTemplate

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .prettierrc.json  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Launcher/: Launcher.c++
Layer/: CMakeLists.txt  Manifest.json  Utils.c++  main.Loader.c++
Source/: CMakeLists.txt  Layer.c++  VkLayer.json
Source/Launcher/: CMakeLists.txt  Launcher.c++
